# cirno

./: .env.production  .gitignore  Dockerfile  README.md  Taskfile.yml
backend/: Cargo.toml  Dockerfile.ci
backend/.cargo/: config.toml
backend/.sqlx/: query-016cf1484405668f09fb1960fa856df1e5a04ac65b1b9ead27598b5ccdc08953.json  query-05034021784e4614379ee0c5f804db6427c3ff7a6a233b11400f4dadb4d33bc2.json  query-070368b31ea1ffc5b5547ad0fefae8485296cedb9526023098c8cb7dada3c969.json  query-0bf66302c790dab455e73d24bc1de275f3664429f7ce76c472fea85ba60abe9e.json  query-0bfbcfa1f59551a57d6ea0b062d5e7f474ba6a4271fa148494b88a12caa43115.json  query-1eafc71569ca49274b5597c0c29d9f175c9af393e902729f908ec9514bbc5e27.json  query-1f987de0c9a7824443c3189f1e152e109b9bf3abc6fc619775661e762435d6b4.json  query-215495a6e8a14f3cae1e2eec89be1f8399a3d9adee27378d485e9e9ba7bd6238.json  query-22324718f6ccaddd1c26c9d030e0ca5ebc05af6533c165927abc01657253748e.json  query-26ba102ca17a84d57056fc35780c4e8f68a48d4bd5ab7cc4826ecb8932e95bb3.json  query-3e0badeda74c3e2f4c2e280cfe6313636185a2595e450e4bc1778813ffac9318.json  query-43fdc5c29160a3b6bef4ff90d00b4c4bcd87404a67936bbfa4ef2214462e30f3.json  query-4412b6b179654a5c1fdd44f11cbbbef9de89a04480602bbbc6d5eaaf20a4346b.json  query-445f09e77768206f209707248fa71f97f4ab4c8a7d3eb6788aa0a9f212c2f6a4.json  query-5145ba0d8dd6bfb79b0d9f1d683d9109d9be7c56d4e1ca4a9a1b62f4ed7912d8.json  query-5624dfd2eaf1590759044bd36b830ff469c2b0319f0dbafbec5c97de1616d9b1.json  query-618d8f06185327731eb89dffcc54fd4de332a71d45ef5e5fe20f1a1e96defd27.json  (+17 more)
backend/db/: schema.sql
(+441 files in other folders)
