[package]
name = "cirno-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = "1.41.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
ts-rs = "10.0.0"
