[package]
name = "cirno-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
anyhow = "1.0.91"
async-trait = "0.1.83"
base64 = "0.22.1"
chrono = "0.4.38"
futures = "0.3.31"
gio = "0.20.5"
gstreamer = "0.23.2"
mockall = "0.13.0"
once_cell = "1.20.2"
quick-xml = "0.36.2"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio"] }
tempfile = "3.13.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
ts-rs = "10.0.0"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
